--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -68,13 +68,12 @@
             <artifactId>javacv</artifactId>
             <version>1.5.6</version>
         </dependency>
+
         <dependency>
-            <groupId>org.bytedeco</groupId>
-            <artifactId>ffmpeg-platform</artifactId>
-            <version>4.4-1.5.6</version>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.8.1</version>
         </dependency>
-
-
 
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
