update video get part

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -110,6 +110,12 @@
             <classifier>linux-ppc64le</classifier>
         </dependency>
 
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.7.3</version>
+        </dependency>
+
 
         <dependency>
             <groupId>cn.hutool</groupId>
